# GARTH-a-lisa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build.sh  shippable.yml
cmake/: compiler_options.cmake
ext/: CMakeLists.txt
ext/boost.compute/: CMakeLists.txt
ext/lodepng/: CMakeLists.txt
perf/: perf_sort_float.cpp
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  ClDevice.h  Color.h  DeviceObjects.h  Line.h  Organism.h  Point.h  SimulationParameters.h  Triangle.cpp  Triangle.h  draw_triangle.h  garth.cpp  kernels.h
